test/deploy-nginx/router.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: test-nginx
spec:
  entryPoints: ["web"]
  routes:
  - kind: Rule
    match: Host(`test-nginx.cuilan.com`)
    priority: 10
    services:
    - kind: Service
      name: test-nginx
      passHostHeader: true
      port: 80
      responseForwarding:
        flushInterval: 1ms
      scheme: http
      strategy: RoundRobin
      weight: 10
