test/deploy-nginx/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: deploy-nginx
  labels:
    svc: deploy-nginx
spec:
  type: NodePort
  selector:
    app: deploy-nginx
  ports:
    - port: 8000
      targetPort: 80
      nodePort: 31000
